# agentic-filmmaker

./: .gitignore  LICENSE  README.md  pyproject.toml  storyboard.html
examples/: example.yaml  fsf.yaml
filmmaker/: __init__.py  assembly.py  audio.py  cli.py  config.py  frames.py  narrative.py  pipeline.py  vision.py
filmmaker/generators/: __init__.py  base.py  face_seed.py  flux.py  kling.py  sora2.py
semantic-afterburner/: generate_test_refs.py  lyrics.txt  project.yaml  storyboard.html
